fixed validation errors, added overflow-y on menu content on landscape mode

--- a/src/styles/blocks/about.scss
+++ b/src/styles/blocks/about.scss
@@ -24,6 +24,7 @@
     }
 
     &-pretitle {
+      display: block;
       margin: 0 0 2px;
       font-size: 12px;
       line-height: 17px;
