--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,6 +1,12 @@
 .menu {
   background-color: $colorAccentMain;
 
+  @media (orientation: landscape) {
+    &__content {
+      overflow-y: auto;
+    }
+  }
+
   &__content {
     box-sizing: border-box;
     padding: $headerTopPadding 0;
